--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,7 +26,9 @@
 <li class="nav-item">
     <a class="nav-link" href="/annoucements/add">Ajout</a>
 </li>
-
+                <li class="nav-item">
+                    <a class="nav-link" href="/contact">Contact</a>
+                </li>
 
 
 </ul>
